made text bold, fixed overlay clipping

--- a/css.css
+++ b/css.css
@@ -16,8 +16,9 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: fit-content;
+  height: fit-content;
+  padding-bottom: 1rem;
   position: relative;
   z-index: 1;
 }
